--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -201,7 +201,9 @@
                                 <h6 id="recipe-type">Type: Dessert</h6>
                                 <h6 id="recipe-time">Prep_time</h6>
                                 <h6 id="recipe-tags">Tags:</h6>
+                                <label id="recipe-comments" style="color: #494949; margin-left: 5px; margin-top: 15px; margin-bottom: -5px; font-style: italic;"></label>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
