--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -194,7 +194,7 @@
 
                 <div class="row">
                     <div class="col-12 col-md-8">
-                        <div class="receipe-headline my-5">
+                        <div class="receipe-headline my-5" style="margin-left:5%;">
                             <span id="recipe-chef"></span>
                             <h2 id="recipe-title" style="font-size:xxx-large;"></h2>
                             <div class="receipe-duration">
