--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -196,12 +196,12 @@
                     <div class="col-12 col-md-8">
                         <div class="receipe-headline my-5" style="margin-left:5%;">
                             <span id="recipe-chef"></span>
-                            <h2 id="recipe-title" style="font-size:xxx-large;"></h2>
+                            <h2 class="recipetitle" id="recipe-title" style="font-size:xxx-large;"></h2>
                             <div class="receipe-duration">
                                 <h6 id="recipe-type">Type: Dessert</h6>
                                 <h6 id="recipe-time">Prep_time</h6>
                                 <h6 id="recipe-tags">Tags:</h6>
-                                <label id="recipe-comments" style="color: #494949; margin-left: 5px; margin-top: 15px; margin-bottom: -5px; font-style: italic;"></label>
+                                <label class="comments" recipe id="recipe-comments"></label>
                             </div>
                             
                         </div>
@@ -212,14 +212,14 @@
                     <!-- Ingredients -->
                     <div class="col-12 col-lg-4">
                         <div class="ingredients">
-                             <h4>Ingrédients</h4>
+                             <h4 class="fixed-title">Ingrédients</h4>
                              <div id="recipe-ingredients"></div>
                         </div>
                     </div>
 
                     <div class="col-12 col-lg-8">
                         <div class="preparation-steps">
-                            <h4>Préparation</h4>
+                            <h4 class="fixed-title">Préparation</h4>
                             <div id="recipe-steps"></div>
                         </div>
                     </div>
