wip header area

--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -144,9 +144,13 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li><a href="receipe-post.html">Receipies</a></li>
-                                    <li><a href="receipe-post.html">4 Vegans</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="#">Cuistots</a>
+                                        <ul class="dropdown">
+                                            <li><a href="recipe-post.html">Kaki</a></li>
+                                            <li><a href="recipe-post.html">Mélinouche</a></li>
+                                        </ul>
+                                    </li>
+                                    <!-- <li><a href="contact.html">Contact</a></li> -->
                                 </ul>
 
                                 <!-- Newsletter Form -->
