added dark mode to header

--- a/ancestral-cookbook/recipe-post.html
+++ b/ancestral-cookbook/recipe-post.html
@@ -76,27 +76,27 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li class="active"><a href="index.html">Accueil</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li class="active"><a class="list-link" href="index.html">Accueil</a></li>
+                                    <li><a class="list-link" href="#">Pages</a>
                                         <ul class="dropdown">
-                                            <li><a href="index.html">Générer un menu</a></li>
-                                            <li><a href="blog-post.html">Rechercher</a></li>
-                                            <li><a href="about.html">À propos</a></li>
+                                            <li><a class="list-item" href="index.html">Générer un menu</a></li>
+                                            <li><a class="list-item" href="blog-post.html">Rechercher</a></li>
+                                            <li><a class="list-item" href="about.html">À propos</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Menu</a>
+                                    <li><a class="list-link" href="#">Menu</a>
                                         <ul class="dropdown">
-                                            <li><a href="index.html">Entrées</a></li>
-                                            <li><a href="blog-post.html">Plats</a></li>
-                                            <li><a href="about.html">Desserts</a></li>
-                                            <li><a href="about.html">Boissons</a></li>
-                                            <li><a href="about.html">Autres</a></li>
+                                            <li><a class="list-item" href="index.html">Entrées</a></li>
+                                            <li><a class="list-item" href="blog-post.html">Plats</a></li>
+                                            <li><a class="list-item" href="about.html">Desserts</a></li>
+                                            <li><a class="list-item" href="about.html">Boissons</a></li>
+                                            <li><a class="list-item" href="about.html">Autres</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Cuistots</a>
+                                    <li><a class="list-link" href="#">Cuistots</a>
                                         <ul class="dropdown">
-                                            <li><a href="recipe-post.html">Kaki</a></li>
-                                            <li><a href="recipe-post.html">Mélinouche</a></li>
+                                            <li><a class="list-item" href="recipe-post.html">Kaki</a></li>
+                                            <li><a class="list-item" href="recipe-post.html">Mélinouche</a></li>
                                         </ul>
                                     </li>
                                     <!-- <li><a href="contact.html">Contact</a></li> -->
