--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -143,7 +143,34 @@
 
         <!-- Recipe Content Area -->
         <div class="receipe-content-area">
-            <div class="container">
+            <div class="container" style="margin-bottom: 60px;">
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <div class="preparation-steps">
+                            <h4 class="fixed-title">Chercher une recette</h4>
+                            <p>Chercher un plat parmi l'ensemble des recettes de la famille.</p>
+                            <a href="receipe-post.html" class="btn delicious-btn">Recherche</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        <!-- Top Catagory Area -->
+        <div style="width: 100%;">
+            <div class="single-top-catagory">
+                <img src="img/bg-img/bg2.jpg" alt="">
+                <!-- Content -->
+                <div class="top-cta-content">
+                    <h3>Repas complet</h3>
+                    <h6>Créer un menu avec entrée, plat, dessert.</h6>
+                    <a href="receipe-post.html" class="btn delicious-btn">Générer un menu</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recipe Content Area -->
+        <div class="receipe-content-area">
+            <div class="container" style="margin-bottom: 60px;">
                 <div class="row">
                     <div class="col-12 col-lg-8">
                         <div class="preparation-steps">
@@ -161,9 +188,15 @@
                         <div class="col-12">
                             <!-- Cta Content -->
                             <div class="cta-content text-center">
-                                <h2>Gluten Free Receipies</h2>
-                                <p>Fusce nec ante vitae lacus aliquet vulputate. Donec scelerisque accumsan molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras sed accumsan neque. Ut vulputate, lectus vel aliquam congue, risus leo elementum nibh</p>
-                                <a href="#" class="btn delicious-btn">Discover all the receipies</a>
+                                <h2>Recettes</h2>
+                                <a href="#" class="btn delicious-btn btn-dish">Tiramisu</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Curry</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Gâteau au chocolat</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Tarte aux pommes</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Courgettes farcies</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Lasagnes</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Gratin de pâtes</a>
+                                <a href="#" class="btn delicious-btn btn-dish">Crêpes au froment</a>
                             </div>
                         </div>
                     </div>
