--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -148,7 +148,7 @@
                     <div class="col-12 col-lg-8">
                         <div class="preparation-steps">
                             <h4 class="fixed-title">Chercher une recette</h4>
-                            <p>Chercher un plat parmi l'ensemble des recettes de la famille.</p>
+                            <p>Cherche un plat parmi l'ensemble des recettes de la famille.</p>
                             <a href="receipe-post.html" class="btn delicious-btn">Recherche</a>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                 <!-- Content -->
                 <div class="top-cta-content">
                     <h3>Repas complet</h3>
-                    <h6>Créer un menu avec entrée, plat, dessert.</h6>
+                    <h6>Crée un menu avec entrée, plat, dessert.</h6>
                     <a href="receipe-post.html" class="btn delicious-btn">Générer un menu</a>
                 </div>
             </div>
@@ -174,8 +174,9 @@
                 <div class="row">
                     <div class="col-12 col-lg-8">
                         <div class="preparation-steps">
-                            <h4 class="fixed-title">Recettes</h4>
-                            <p>Recettes familiaaaaaaaaaaaaaaaaaaaaales.</p>
+                            <h4 class="fixed-title">Recette au hasard</h4>
+                            <p>Ouvre une recette du catalogue au hasard.</p>
+                            <a href="receipe-post.html" class="btn delicious-btn">Recette surprise</a>
                         </div>
                     </div>
                 </div>
