added recipes box + navigation to recipe pages

--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -100,14 +100,7 @@
                             <!-- Cta Content -->
                             <div class="cta-content text-center">
                                 <h2>Recettes</h2>
-                                <a href="#" class="btn delicious-btn btn-dish">Tiramisu</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Curry</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Gâteau au chocolat</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Tarte aux pommes</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Courgettes farcies</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Lasagnes</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Gratin de pâtes</a>
-                                <a href="#" class="btn delicious-btn btn-dish">Crêpes au froment</a>
+                                <div id="recipes-box"></div>
                             </div>
                         </div>
                     </div>
