--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -27,22 +27,7 @@
     
     <div id="website-header"></div>
 
-    <!-- ##### Breadcumb Area Start ##### -->
-    <div class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb3.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcumb-text text-center">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ##### Breadcumb Area End ##### -->
-
-    <div class="receipe-post-area section-padding-80">
-
-        <!-- Recipe Slider -->
+            <!-- Recipe Slider -->
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -51,29 +36,16 @@
             </div>
         </div>
 
-        <!-- Recipe Content Area -->
-        <div class="receipe-content-area">
-            <div class="container" style="margin-bottom: 60px;">
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <div class="preparation-steps">
-                            <h4 class="fixed-title">Chercher une recette</h4>
-                            <p>Cherche un plat parmi l'ensemble des recettes de la famille.</p>
-                            <a href="receipe-post.html" class="btn delicious-btn">Recherche</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        <!-- Top Catagory Area -->
-        <div style="width: 100%;">
+    <div class="receipe-post-area section-padding-80">
+         <!-- Top Catagory Area -->
+        <div style="width: 100%; margin-top: -40px;">
             <div class="single-top-catagory">
                 <img src="img/bg-img/bg2.jpg" alt="">
                 <!-- Content -->
                 <div class="top-cta-content">
-                    <h3>Repas complet</h3>
-                    <h6>Crée un menu avec entrée, plat, dessert.</h6>
-                    <a href="receipe-post.html" class="btn delicious-btn">Générer un menu</a>
+                    <h3>Chercher une recette</h3>
+                    <h6>Cherche un plat parmi l'ensemble des recettes de la famille.</h6>
+                    <a href="receipe-post.html" class="btn delicious-btn">Recherche</a>
                 </div>
             </div>
         </div>
@@ -84,9 +56,9 @@
                 <div class="row">
                     <div class="col-12 col-lg-8">
                         <div class="preparation-steps">
-                            <h4 class="fixed-title">Recette au hasard</h4>
-                            <p>Ouvre une recette du catalogue au hasard.</p>
-                            <a href="receipe-post.html" class="btn delicious-btn">Recette surprise</a>
+                            <h4 class="fixed-title">Repas complet</h4>
+                            <p>Crée un menu avec entrée, plat, dessert.</p>
+                            <a href="receipe-post.html" class="btn delicious-btn">Générer un menu</a>
                         </div>
                     </div>
                 </div>
@@ -107,6 +79,20 @@
                 </div>
             </section>
             <!-- ##### CTA Area End ##### -->
+
+            <!-- Recipe Content Area -->
+        <div class="receipe-content-area" style="margin-top: 40px;">
+            <div class="container" style="margin-bottom: 60px;">
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <div class="preparation-steps">
+                            <h4 class="fixed-title">Recette au hasard</h4>
+                            <p>Ouvre une recette du catalogue au hasard.</p>
+                            <a href="receipe-post.html" class="btn delicious-btn">Recette surprise</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
