--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -43,7 +43,7 @@
                 <div class="top-cta-content">
                     <h3>Chercher une recette</h3>
                     <h6>Cherche un plat parmi l'ensemble des recettes de la famille.</h6>
-                    <a href="receipe-post.html" class="btn delicious-btn">Recherche</a>
+                    <a href="recipe.html" class="btn delicious-btn">Recherche</a>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
                         <div class="preparation-steps">
                             <h4 class="fixed-title">Repas complet</h4>
                             <p>Crée un menu avec entrée, plat, dessert.</p>
-                            <a href="receipe-post.html" class="btn delicious-btn">Générer un menu</a>
+                            <a href="recipe.html" class="btn delicious-btn">Générer un menu</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,9 @@
                         <div class="preparation-steps">
                             <h4 class="fixed-title">Recette au hasard</h4>
                             <p>Ouvre une recette du catalogue au hasard.</p>
-                            <a href="receipe-post.html" class="btn delicious-btn">Recette surprise</a>
+                            <a href="recipe.html" class="btn delicious-btn" onclick="goToRandomRecipe(event)">
+                                Recette surprise
+                            </a>
                         </div>
                     </div>
                 </div>
