--- a/ancestral-cookbook/menu.html
+++ b/ancestral-cookbook/menu.html
@@ -50,6 +50,21 @@
         <div class="col-12">
             <div class="delicious-cool-facts-area">
                 <div class="row">
+
+                    <!-- Menuitem -->
+                    <div class="meal-item" onclick="window.open('recipe.html?name=12345', '_blank')">
+                        <div class="meal-header">
+                            <img src="img/core-img/hamburger.png" alt="" style="margin-right:0px;scale: 0.6;">
+                            <h3 class="meal-title">Tiramisu</h3>
+                        </div>
+                        <p class="meal-desc">
+                            45min
+                        </p>
+                        <p class="meal-desc">
+                            Kiffeur, Gâteau, Anniversaire
+                        </p>
+                    </div>
+
                     <!-- Single Cool Fact -->
                     <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-cool-fact">
