fixed loading order

--- a/ancestral-cookbook/recipe.html
+++ b/ancestral-cookbook/recipe.html
@@ -240,7 +240,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
     <!-- jQuery (required by Owl Carousel) -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>     BREAKS THE PAGE IDK  -->
+    <!-- jQuery-2.2.4 js -->
+    <script src="js/jquery/jquery-2.2.4.min.js"></script>
 
     <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -249,8 +251,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js\PapaParse-5.0.2\papaparse.min.js"></script>
     <script src="js/recipe_functions.js"></script>
 
-    <!-- jQuery-2.2.4 js -->
-    <script src="js/jquery/jquery-2.2.4.min.js"></script>
+    
     <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js"></script>
     <!-- Bootstrap js -->
