--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -153,13 +153,6 @@
     <script src="js/active.js"></script>
 
     <script>
-        // 🥘 Exemple: tu remplaces recipesDataPLACEHOLDER par ta variable globale après parsing CSV
-        const recipesDataPLACEHOLDER = [
-            { ID: "1", Titre: "Tiramisu", Type: "Dessert", Cuistot: "Kaki", Tags: ["café", "sucré"] },
-            { ID: "2", Titre: "Lasagnes", Type: "Plat", Cuistot: "Mélinouche", Tags: ["pâtes", "fromage"] },
-            { ID: "3", Titre: "Salade César", Type: "Entrée", Cuistot: "Kaki", Tags: ["salade", "poulet"] }
-        ];
-
         const searchBar = document.getElementById("searchBar");
         const categoryFilter = document.getElementById("categoryFilter");
         const chefFilter = document.getElementById("chefFilter");
@@ -173,14 +166,14 @@
         categoryFilter.innerHTML = `<option value="">Toutes les catégories</option>`;
         chefFilter.innerHTML = `<option value="">Tous les cuistots</option>`;
 
-        if (!recipesDataPLACEHOLDER || recipesDataPLACEHOLDER.length === 0) {
-            console.warn("recipesDataPLACEHOLDER is empty when building filters");
+        if (!recipesData || recipesData.length === 0) {
+            console.warn("recipesData is empty when building filters");
             return;
         }
 
         // Normalize keys just in case (toLowerCase)
-        const types = [...new Set(recipesDataPLACEHOLDER.map(r => (r.Type || r.type || "").trim()).filter(Boolean))];
-        const chefs = [...new Set(recipesDataPLACEHOLDER.map(r => (r.Cuistot || r.cuistot || "").trim()).filter(Boolean))];
+        const types = [...new Set(recipesData.map(r => (r.Type || r.type || "").trim()).filter(Boolean))];
+        const chefs = [...new Set(recipesData.map(r => (r.Cuistot || r.cuistot || "").trim()).filter(Boolean))];
 
         types.forEach(type => {
             const opt = document.createElement("option");
@@ -228,50 +221,80 @@
             });
         }
 
-        function filterRecipes() {
-            const searchTerm = searchBar.value.toLowerCase();
-            const category = categoryFilter.value;
-            const chef = chefFilter.value;
+    function filterRecipes() {
+        const searchTerm = searchBar.value.toLowerCase();
+        const category = categoryFilter.value;
+        const chef = chefFilter.value;
 
-            const filtered = recipesDataPLACEHOLDER.filter(recipe => {
-                const matchesSearch = recipe.Titre.toLowerCase().includes(searchTerm);
-                const matchesCategory = !category || recipe.Type === category;
-                const matchesChef = !chef || recipe.Cuistot === chef;
-                const matchesTags = activeTags.every(tag => recipe.Tags.map(t => t.toLowerCase()).includes(tag.toLowerCase()));
-
-                return matchesSearch && matchesCategory && matchesChef && matchesTags;
-            });
-
-            renderResults(filtered);
-        }
-
-        function renderResults(list) {
-            resultsDiv.innerHTML = "";
-            if (list.length === 0) {
-                resultsDiv.innerHTML = "<p>Aucune recette trouvée.</p>";
-                return;
+        const filtered = recipesData.filter(recipe => {
+            // Ensure Tags is always an array
+            let tags = recipe.Tags;
+            if (typeof tags === "string") {
+                // split CSV field into array (assuming separated by commas or semicolons)
+                tags = tags.split(/[,;]\s*/);
+            } else if (!Array.isArray(tags)) {
+                tags = []; // fallback
             }
 
-            list.forEach(r => {
-                const div = document.createElement("div");
-                div.className = "meal-item";
-                div.onclick = () => window.open(`recipe.html?name=${r.ID}`, "_blank");
-                div.innerHTML = `
-                    <h3 class="meal-title">${r.Titre}</h3>
-                    <p class="meal-desc">Type: ${r.Type} • Cuistot: ${r.Cuistot}</p>
-                    <p class="meal-desc">Tags: ${r.Tags.join(", ")}</p>
-                `;
-                resultsDiv.appendChild(div);
-            });
+            const matchesSearch = recipe.Titre.toLowerCase().includes(searchTerm);
+            const matchesCategory = !category || recipe.Type === category;
+            const matchesChef = !chef || recipe.Cuistot === chef;
+            const matchesTags = activeTags.every(tag =>
+                tags.map(t => t.toLowerCase()).includes(tag.toLowerCase())
+            );
+
+            return matchesSearch && matchesCategory && matchesChef && matchesTags;
+        });
+
+        renderResults(filtered);
+    }
+
+
+    function renderResults(list) {
+        resultsDiv.innerHTML = "";
+        if (list.length === 0) {
+            resultsDiv.innerHTML = "<p>Aucune recette trouvée.</p>";
+            return;
         }
+
+        list.forEach(r => {
+            // Normalize tags
+            let tags = r.Tags;
+            if (typeof tags === "string") {
+                tags = tags.split(/[,;]\s*/);
+            } else if (!Array.isArray(tags)) {
+                tags = [];
+            }
+
+            const div = document.createElement("div");
+            div.className = "meal-item";
+            div.onclick = () => window.open(`recipe.html?name=${r.ID}`, "_blank");
+            div.innerHTML = `
+                <h3 class="meal-title">${r.Titre}</h3>
+                <p class="meal-desc">Type: ${r.Type} • Cuistot: ${r.Cuistot}</p>
+                <p class="meal-desc">Tags: ${tags.join(", ")}</p>
+            `;
+            resultsDiv.appendChild(div);
+        });
+    }
 
         searchBar.addEventListener("input", filterRecipes);
         categoryFilter.addEventListener("change", filterRecipes);
         chefFilter.addEventListener("change", filterRecipes);
 
         // Init
-        initFilters();
-        filterRecipes();
+        if (isRecipesDataLoaded) {
+            initFilters();
+            filterRecipes();
+        } else {
+            document.addEventListener("recipeDataLoaded", function () {
+                console.log("RecipesData loaded from EventListnener");
+                initFilters();
+                filterRecipes();
+            });
+        }
+        
+        
     </script>
 </body>
 </html>
