--- a/ancestral-cookbook/recipe.html
+++ b/ancestral-cookbook/recipe.html
@@ -72,7 +72,7 @@
 
                 <div class="row">
                     <!-- Ingredients -->
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-lg-4" style="padding-right: 12%;">
                         <div class="ingredients">
                              <h4 class="fixed-title">Ingrédients</h4>
                              <div id="recipe-ingredients"></div>
