fixed carousel arrows

--- a/ancestral-cookbook/recipe.html
+++ b/ancestral-cookbook/recipe.html
@@ -58,7 +58,7 @@
                     <div class="col-12 col-md-8">
                         <div class="receipe-headline my-5" style="margin-left:5%;">
                             <span id="recipe-chef"></span>
-                            <h2 class="recipetitle" id="recipe-title" style="font-size:xxx-large;"></h2>
+                            <h2 class="recipetitle" id="recipe-title" style="font-size: 80px;"></h2>
                             <div class="receipe-duration">
                                 <h6 id="recipe-type">Type: Dessert</h6>
                                 <h6 id="recipe-time">Prep_time</h6>
