wip search page color scheme

--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -61,8 +61,7 @@
         }
 
         .meal-item {
-            background-color: var(--meal-bg, #e0f0ff);
-            border-radius: 12px;
+            background-color: #D7BD86;
             padding: 16px;
             cursor: pointer;
             transition: background 0.2s;
