--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -273,6 +273,7 @@
                 <h3 class="meal-title">${r.Titre}</h3>
                 <p class="meal-desc">${r.Type} • ${r.Cuistot}</p>
                 <p class="meal-desc">${tags.join(", ")}</p>
+                <p class="meal-item-button">RECETTE</p>
             `;
             resultsDiv.appendChild(div);
         });
