added food tags

--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -180,7 +180,9 @@
         const activeTagsDiv = document.getElementById("activeTags");
 
         const allTags = [
-            ""
+            "végétarien", "vegan", "sain", "kiffeur", "anniversaire", "gâteau", "sans gluten",
+            "brunch", "apéro", "breton", "italien", "pâtes", "viande", "poisson", "fast food",
+            "rapide", "long", "soupe", "salade", "snack", "léger", "réconfortant", "froid"
         ];
 
         const tagInput = document.getElementById("tag-input");
