--- a/ancestral-cookbook/index.html
+++ b/ancestral-cookbook/index.html
@@ -43,7 +43,7 @@
                 <div class="top-cta-content">
                     <h3>Chercher une recette</h3>
                     <h6>Cherche un plat parmi l'ensemble des recettes de la famille.</h6>
-                    <a href="recipe.html" class="btn delicious-btn">Recherche</a>
+                    <a href="search.html" class="btn delicious-btn">Recherche</a>
                 </div>
             </div>
         </div>
