--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -66,9 +66,10 @@
 
         .meal-item {
             background-color: #D7BD86;
-            padding: 16px;
+            padding: 0px;
             cursor: pointer;
             border-radius: 12px;
+            min-height: 250px;
         }
 
         @media (prefers-color-scheme: dark) {
@@ -100,6 +101,14 @@
             opacity: 0.85;
             font-weight: 400;
             margin-bottom: -10px;
+        }
+
+        .meal-img {
+            width:100%;
+            max-height:160px;
+            object-fit:cover;
+            border-radius:8px;
+            margin-bottom:10px;
         }
 
         .dropdown {
@@ -309,7 +318,14 @@
             const div = document.createElement("div");
             div.className = "meal-item";
             div.onclick = () => window.open(`recipe.html?name=${r.ID}`, "_blank");
+            console.log("r.Images = " + r.Images);
+            console.log("typeof r.Images = " + typeof r.Images);
+            console.log("r.Images.length = " + r.Images.length )
+            console.log("r.Images[0] = " + r.Images )
+
+            const imgSrc = r.Images.split(",")[0];
             div.innerHTML = `
+                <img class=meal-img src="${imgSrc}">
                 <h3 class="meal-title">${r.Titre}</h3>
                 <p class="meal-desc">${r.Cuistot}</p>
                 <p class="meal-desc">${tags.join(", ")}</p>
