added page header

--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -118,6 +118,16 @@
             overflow-y: auto;
             background-color: #E4D2AC;
         }
+
+        .page-header {
+            font-size: 60px !important;
+        }
+
+        @media (max-width: 800px) {
+            .page-header {
+                font-size: 35px !important;
+            }  
+        }
     </style>
 </head>
 
@@ -131,7 +141,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-text text-center">
-                        <h2>Recherche de recettes</h2>
+                        <h2 class="page-header">Recherche de recettes</h2>
                     </div>
                 </div>
             </div>
