--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -60,8 +60,9 @@
 
         .results {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-            gap: 15px;
+            grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+            gap: 10px;
+            place-items: center;
         }
 
         .tag-option {
