--- a/ancestral-cookbook/search.html
+++ b/ancestral-cookbook/search.html
@@ -150,7 +150,7 @@
             </select>
 
             <div class="tag-search-container" style="margin-bottom: 60px;">
-                <input type="text" id="tag-input" style="min-width: 200px;" placeholder="Filtrer par tags...">
+                <input type="text" id="tag-input" style="min-width: 250px;" placeholder="Filtrer par tags...">
                 <div class="dropdown" id="dropdown"></div>
             </div>
             
@@ -206,34 +206,34 @@
         let activeTags = [];
 
         function initFilters() {
-        categoryFilter.innerHTML = `<option value="">Toutes les catégories</option>`;
-        chefFilter.innerHTML = `<option value="">Tous les cuistots</option>`;
+            categoryFilter.innerHTML = `<option value="">Toutes les catégories</option>`;
+            chefFilter.innerHTML = `<option value="">Tous les cuistots</option>`;
 
-        if (!recipesData || recipesData.length === 0) {
-            console.warn("recipesData is empty when building filters");
-            return;
-        }
+            if (!recipesData || recipesData.length === 0) {
+                console.warn("recipesData is empty when building filters");
+                return;
+            }
 
-        // Normalize keys just in case (toLowerCase)
-        const types = [...new Set(recipesData.map(r => (r.Type || r.type || "").trim()).filter(Boolean))];
-        const chefs = [...new Set(recipesData.map(r => (r.Cuistot || r.cuistot || "").trim()).filter(Boolean))];
+            // Normalize keys just in case (toLowerCase)
+            const types = [...new Set(recipesData.map(r => (r.Type || r.type || "").trim()).filter(Boolean))];
+            const chefs = [...new Set(recipesData.map(r => (r.Cuistot || r.cuistot || "").trim()).filter(Boolean))];
 
-        types.forEach(type => {
-            const opt = document.createElement("option");
-            opt.value = type;
-            opt.textContent = type;
-            categoryFilter.appendChild(opt);
-        });
+            types.forEach(type => {
+                const opt = document.createElement("option");
+                opt.value = type;
+                opt.textContent = type;
+                categoryFilter.appendChild(opt);
+            });
 
-        chefs.forEach(chef => {
-            const opt = document.createElement("option");
-            opt.value = chef;
-            opt.textContent = chef;
-            chefFilter.appendChild(opt);
-        });
+            chefs.forEach(chef => {
+                const opt = document.createElement("option");
+                opt.value = chef;
+                opt.textContent = chef;
+                chefFilter.appendChild(opt);
+            });
 
-        console.log("chefFilter = " + chefs);
-        console.log("categoryFilter = " + types);
+            $('#chefFilter').niceSelect('update');
+            $('#categoryFilter').niceSelect('update');
         }
 
         function addTag(my_tag) {
